// schema.prisma

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  // Connection URLs live in prisma.config.ts (Prisma 7+).
}

// Single-admin app: exactly one User row should ever exist (see
// src/lib/current-user.ts). clientSeq backs Client.clientNumber allocation.
enum Role {
  USER // a tenant: owns their own clients, documents and business profile
  SUPER_ADMIN // operator of the product: manages accounts, never reads tenant documents
}

enum AccountStatus {
  ACTIVE
  SUSPENDED // can authenticate with Supabase, but is refused at getCurrentUser()
}

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  name          String?
  passwordHash  String?
  emailVerified DateTime?
  image         String?
  accounts      Account[]
  sessions      Session[]

  businessProfile BusinessProfile?
  clients         Client[]
  documents       Document[]
  clientSeq       Int       @default(0) // next Client.clientNumber to hand out

  // Access control. Authentication is Supabase's job; authorization is ours,
  // and it lives here rather than in an env var so accounts can be managed at
  // runtime. SUPER_ADMIN_EMAIL survives only as the bootstrap/break-glass
  // path - see src/lib/current-user.ts.
  role        Role          @default(USER)
  status      AccountStatus @default(ACTIVE)
  suspendedAt DateTime?
  lastLoginAt DateTime?

  apiKeys        ApiKey[]
  idempotency    IdempotencyRecord[]
  auditActions AdminAuditLog[] @relation("AdminAuditActor")
  auditTargets AdminAuditLog[] @relation("AdminAuditTarget")

  createdAt DateTime @default(now())

  @@index([role])
  @@index([status])
}

/// Append-only record of every account action a super admin takes. Nothing
/// deletes from here - if an account was suspended or promoted, that fact must
/// remain provable after the fact.
model AdminAuditLog {
  id      String @id @default(cuid())
  actorId String
  actor   User   @relation("AdminAuditActor", fields: [actorId], references: [id], onDelete: Cascade)

  // Null for actions that are not about one specific account.
  targetUserId String?
  target       User?   @relation("AdminAuditTarget", fields: [targetUserId], references: [id], onDelete: SetNull)

  action String // "user.provisioned" | "user.suspended" | "user.restored" | "user.role_changed"
  meta   Json?

  createdAt DateTime @default(now())

  @@index([createdAt])
  @@index([actorId, createdAt])
  @@index([targetUserId, createdAt])
}

model Account {
  id                 String  @id @default(cuid())
  userId             String
  type               String
  provider           String
  providerAccountId  String
  refresh_token      String?  @db.Text
  access_token       String?  @db.Text
  expires_at         Int?
  token_type         String?
  scope              String?
  id_token           String?  @db.Text
  session_state      String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model BusinessProfile {
  id            String   @id @default(cuid())
  userId        String   @unique
  user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  businessName  String
  ownerName     String
  email         String
  phone         String?
  address       String?
  website       String?
  taxId         String?
  logoUrl       String?
  brandColor    String?  @default("#000000")
  paymentMethod String?
  bankName      String?
  accountNumber String?
  routingSwift  String?
  upiId         String?  // UPI VPA for QR-based payment, e.g. name@bank (phase 2 QR code)
  currency      String?  @default("USD") // default currency for new documents

  // Defaults copied onto new documents; editable per-document afterwards.
  defaultTaxMode         TaxMode  @default(NONE)
  defaultTaxRate         Decimal? @db.Decimal(5, 2)
  defaultTaxLabel        String?
  defaultPaymentTermDays Int?     @default(15)

  // Signature shown on contracts as the issuer's counter-signature.
  signatureName      String?
  signatureImageUrl  String?

  updatedAt DateTime @updatedAt
}

// A client's `code` (e.g. "ACME") is auto-suggested from their business name
// and is editable up until their first document is finalized - after that it
// is locked server-side, because every issued refNumber embeds it
// (INV-ACME-001) and an edited code would orphan historical serials.
model Client {
  id              String     @id @default(cuid())
  userId          String
  user            User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  clientNumber    Int        // sequential internal id, assigned from User.clientSeq
  code            String     // short uppercase code used in document serials
  fullName        String
  businessName    String?
  email           String
  phone           String?
  address         String?
  country         String?
  taxId           String?    // GSTIN or equivalent, shown on invoices when set
  notes           String?
  tags            String[]   // e.g. ["active", "video", "high-value"]
  defaultCurrency String?    // overrides BusinessProfile.currency for this client

  // Identity in the system that pushed this record (CRM, etc). Nullable, and
  // Postgres allows many NULLs under a unique index, so hand-created clients
  // are unaffected. This is what makes a re-sync an update instead of a
  // duplicate.
  externalId   String?
  sourceSystem String?
  archivedAt      DateTime?

  // Per-client serial counters. Incremented transactionally in
  // src/lib/allocate-ref.ts when a document is finalized - never on create,
  // so deleting a draft never leaves a gap in issued numbers.
  // Each type counts separately so converting a quote into an invoice never
  // burns an invoice number, and INV- stays gapless on its own.
  invoiceSeq  Int @default(0)
  contractSeq Int @default(0)
  quoteSeq    Int @default(0)
  proformaSeq Int @default(0)

  documents Document[]
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt

  @@unique([userId, code])
  @@unique([userId, externalId])
  @@index([userId, archivedAt])
  @@index([userId, createdAt])
}

enum DocumentType {
  INVOICE
  CONTRACT
  QUOTE    // quotation / estimate - converts to an INVOICE once accepted
  PROFORMA // proforma invoice - converts to an INVOICE once confirmed
}

// Lifecycle only - money status (paid/partial/overdue) is derived from
// Document.amountPaid vs totalAmount/dueDate, not stored here, so it can
// never drift out of sync with the Payment ledger.
enum DocumentStatus {
  DRAFT     // editable, unnumbered, not shareable
  FINALIZED // numbered + snapshotted + shareable; "SENT" for invoices
  SIGNED    // contracts only, after e-signature; permanently locked
  VOID      // cancelled after finalize; number stays allocated (no reuse)
  ARCHIVED
}

enum TaxMode {
  NONE
  PERCENTAGE
}

model Document {
  id       String @id @default(cuid())
  userId   String
  user     User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  clientId String?
  client   Client? @relation(fields: [clientId], references: [id], onDelete: Cascade)

  type   DocumentType
  status DocumentStatus @default(DRAFT)

  // refNumber/sequence are NULL while DRAFT and assigned atomically on
  // finalize by src/lib/allocate-ref.ts, e.g. "INV-ACME-001" / sequence 1.
  refNumber String?
  sequence  Int?

  title   String?
  content Json // line items / clauses; frozen (no longer read from live
  // Client/BusinessProfile rows) once status leaves DRAFT - see
  // src/lib/snapshot.ts

  currency String  @default("USD")
  taxMode  TaxMode @default(NONE)
  taxRate  Decimal? @db.Decimal(5, 2)
  taxLabel String?

  subtotal    Decimal? @db.Decimal(12, 2)
  taxAmount   Decimal? @db.Decimal(12, 2)
  totalAmount Decimal? @db.Decimal(12, 2)
  amountPaid  Decimal  @default(0) @db.Decimal(12, 2)

  // Money already in hand before this invoice was raised - a prior advance or
  // an earlier milestone payment. Deducted from the total on the printed
  // document to give the balance due. Distinct from amountPaid, which is the
  // Payment ledger for THIS document; both count as received (see
  // paymentSummary in src/lib/money.ts).
  advanceReceived Decimal @default(0) @db.Decimal(12, 2)

  issueDate DateTime?
  dueDate   DateTime?

  finalizedAt DateTime?

  publicSlug    String?    @unique // random token, not derived from id
  slugRevokedAt DateTime?

  signatureData Json? // e-signature payload for CONTRACT documents
  contentHash   String? // sha256 of `content` at finalize/sign time, so a

  // later edit can never be passed off as what was actually signed
  // Set on the INVOICE created from an accepted QUOTE/PROFORMA. The source
  // document keeps its own number and is never mutated - conversion copies
  // forward, so both sides stay independently auditable.
  externalId   String?
  sourceSystem String?

  convertedFromId String?
  convertedFrom   Document?  @relation("DocumentConversion", fields: [convertedFromId], references: [id], onDelete: SetNull)
  convertedTo     Document[] @relation("DocumentConversion")

  payments Payment[]
  activity DocumentActivity[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userId, refNumber])
  @@unique([userId, externalId])
  @@index([userId, type])
  @@index([userId, status])
  // Covers the list pages: WHERE userId = ? ORDER BY createdAt DESC. Without
  // it Postgres can filter or sort from an index, but not both.
  @@index([userId, createdAt])
  @@index([convertedFromId])
  @@index([clientId])
}

/// Per-tenant API credential for the public REST surface (src/app/api/v1).
/// Only a SHA-256 of the secret is stored - the plaintext is shown once at
/// creation and is unrecoverable afterwards.
model ApiKey {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  name String // human label, e.g. "HubSpot production"

  /// Public, non-secret prefix used to find the row before verifying the
  /// hash. Indexed so lookup never scans, and safe to display in the UI.
  lookupId String @unique
  keyHash  String // sha256 of the full secret

  lastUsedAt DateTime?
  revokedAt  DateTime?
  createdAt  DateTime  @default(now())

  @@index([userId, revokedAt])
}

/// Replay protection for unsafe API calls. A retried POST with the same
/// Idempotency-Key returns the stored response instead of creating a second
/// client or document.
model IdempotencyRecord {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  key      String
  endpoint String
  /// Hash of the request body, so the same key sent with different content is
  /// rejected rather than silently returning the wrong stored response.
  requestHash    String
  responseStatus Int
  responseBody   Json

  createdAt DateTime @default(now())

  @@unique([userId, key])
  @@index([createdAt])
}

model Payment {
  id         String   @id @default(cuid())
  documentId String
  document   Document @relation(fields: [documentId], references: [id], onDelete: Cascade)
  amount     Decimal  @db.Decimal(12, 2)
  paidOn     DateTime
  method     String? // "UPI", "Bank transfer", "Cash", ...
  reference  String?
  note       String?
  createdAt  DateTime @default(now())

  @@index([documentId])
}

model DocumentActivity {
  id         String   @id @default(cuid())
  documentId String
  document   Document @relation(fields: [documentId], references: [id], onDelete: Cascade)
  event      String // "created" | "finalized" | "shared" | "viewed" |
  // "downloaded" | "signed" | "payment_recorded" | "voided"
  meta      Json?
  createdAt DateTime @default(now())

  @@index([documentId, createdAt])
}
